fixed bug in ipad alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -430,8 +430,8 @@
   align-items: center;
 }
 
-.swiperSlide{
-  position: relative; 
+.swiperSlide {
+  position: relative;
 }
 
 .tamara_icon {
@@ -516,11 +516,11 @@
   .info_card h4 {
     font-size: 22px;
   }
-}
+} */
 
-@media (max-width: 991.98px) {
+@media (max-width: 1024px) {
   .info_card h4 {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 
@@ -528,7 +528,7 @@
   .info_card h4 {
     font-size: 18px;
   }
-} */
+}
 
 .info_card h4 span {
   color: var(--main_color);
@@ -569,35 +569,30 @@
   .info_card ul {
     height: 245px;
   }
-
 }
 
 @media (max-width: 1199.98px) {
   .info_card ul {
     height: 270px;
   }
-
 }
 
 @media (max-width: 991.98px) {
   .info_card ul {
     height: 180px;
   }
-
 }
 
 @media (max-width: 575.98px) {
   .info_card ul {
     height: 160px;
   }
-
 }
 
 @media (max-width: 375.98px) {
   .info_card ul {
     height: 140px;
   }
-
 }
 
 .info_card ul::-webkit-scrollbar {
@@ -684,7 +679,7 @@
   font-weight: 600;
   line-height: 1;
   text-align: center;
-  color: #9E6439;
+  color: #9e6439;
   position: relative;
   z-index: 0;
 }
@@ -740,7 +735,7 @@
 }
 
 .price_offer h5 .currency {
-  color: #9E6439;
+  color: #9e6439;
 }
 
 .price_offer h6 .currency,
@@ -754,14 +749,11 @@
 }
 
 @media (max-width: 991.98px) {
-
   .price_offer h6 .currency,
   .price_offer h5 .currency {
     bottom: -10px;
   }
 }
-
-
 
 .info_card button {
   background-color: transparent;
@@ -780,8 +772,7 @@
   -o-transition: all 0.3s;
   border-radius: 6px;
   background: var(--main_color);
-  box-shadow: 0px 1px 2px 0px rgba(42, 51, 66, 0.03),
-    0px 1px 3px 0px rgba(42, 51, 66, 0.06);
+  box-shadow: 0px 1px 2px 0px rgba(42, 51, 66, 0.03), 0px 1px 3px 0px rgba(42, 51, 66, 0.06);
 }
 
 .info_card button:hover {
@@ -1168,7 +1159,6 @@
   }
 }
 
-
 .formWrap {
   padding: 35px 40px;
   background-color: #f9f6f3;
@@ -1189,12 +1179,12 @@
   }
 }
 
-.formRow>* {
+.formRow > * {
   margin: 10px 0;
 }
 
 @media (max-width: 991.98px) {
-  .formRow>* {
+  .formRow > * {
     margin: 6px 0;
   }
 }
@@ -1322,7 +1312,6 @@
 }
 
 @media (max-width: 991.98px) {
-
   .FAQ_info h2 {
     flex-basis: 95%;
   }
